--- a/screen4_css.css
+++ b/screen4_css.css
@@ -12,7 +12,7 @@
 
 body {
   width: 970px;
-  height: 800px;
+  height: 850px;
   padding: 0px;
   margin-left: auto;
   margin-right: auto;
@@ -20,14 +20,72 @@ body {
 
 
 #header {
-
+	width: 950px;
+	height: 150px;
+	font-family: Verdana;
+	
+	border: 2px solid black;
 }
 
-#content {
-	width: 900px;
+#header img {
+	width: 357px;
+	height: 68px;
+	border: none;
+	display: inline;
+	vertical-align: middle;
+	margin-left: 10px;
 }
 
+#header p {
+	width: 350px;
+	margin-left: 210px;
+	text-transform: uppercase;
+	position: relative;
+	top: 10px;
+	display: inline;
+	font-size: 18px;
+	font-weight: bold;
+}
+
+#header ul {
+	width: 950px;
+	height: 30px;
+	border-top-style: solid;
+	border-color: #999999;
+	border-width: 2px;
+	background: -webkit-linear-gradient(#EDF1F3, #DBE1E6); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(#EDF1F3, #DBE1E6); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(#EDF1F3, #DBE1E6); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(#EDF1F3, #DBE1E6); /* Standard syntax */
+}
 
 #header li {
 	display: inline;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 3px;
+	padding-bottom: 3px;
+	margin-left: 0px;
+	font-size: 12px;
+	border-right-style: solid;
+	border-width: 2px;
+	color: #CCCCCC;
+}
+
+#header ul li:first-child {
+	margin-left: 25px;
+	border-left-style: solid;
+	border-width: 2px;
+	color: #CCCCCC;
+}
+
+li a {
+	text-decoration: none;
+	color: #999999;
+}
+
+#content {
+	width: 950px;
+	height: 600px;
+	padding: 10px;
 }
