--- a/screen4_css.css
+++ b/screen4_css.css
@@ -8,8 +8,7 @@ body {
 
 
 #header {
-	border: 2px solid black;
-	height: 150px;
+	height: 120px;
 	font-family: Verdana;
 	width: 950px;
 }
@@ -25,9 +24,9 @@ body {
 
 #header p {
 	display: inline;
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: bold;
-	margin-left: 210px;
+	margin-left: 250px;
 	position: relative;
 	text-transform: uppercase;
 	top: 10px;
@@ -53,7 +52,8 @@ body {
 	color: #999999;
 	cursor: pointer;
 	display: inline;
-	font-size: 12px;
+	font-size: 10px;
+	font-weight: bold;
 	margin-left: 0px;
 	padding-left: 15px;
 	padding-right: 15px;
@@ -63,7 +63,6 @@ body {
 
 #header ul li:first-child {
 	border-left-style: solid;
-	margin-left: 25px;
 }
 
 li a {
@@ -72,6 +71,10 @@ li a {
 }
 
 #content {
+	background: -webkit-linear-gradient(left, #000000 25%, #444444 50%, black 75%); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(right, #000000 25%, #444444 50%, black 75%); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(right, #000000 25%, #444444 50%, black 75%); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(to right, #000000 25%, #444444 50%, black 75%); /* Standard syntax */
 	height: 600px;
 	padding: 10px;
 	width: 950px;
