--- a/screen4_css.css
+++ b/screen4_css.css
@@ -1,5 +1,5 @@
 body {
-  height: 850px;
+  height: 810px;
   margin-left: auto;
   margin-right: auto;
   padding: 0px;
@@ -75,7 +75,101 @@ li a {
 	background: -o-linear-gradient(right, #000000 25%, #444444 50%, black 75%); /* For Opera 11.1 to 12.0 */
 	background: -moz-linear-gradient(right, #000000 25%, #444444 50%, black 75%); /* For Firefox 3.6 to 15 */
 	background: linear-gradient(to right, #000000 25%, #444444 50%, black 75%); /* Standard syntax */
-	height: 600px;
-	padding: 10px;
+	height: 650px;
+	padding: 20px 30px;
 	width: 950px;
+}
+
+#content img:first-child {
+	border: 5px ridge white;
+	display: inline-block;
+	height: 255px;
+	vertical-align: top;
+	width: 377px;
+}
+
+div#about_info {
+	background: -webkit-linear-gradient(left, #6B6B6B, #373737); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(right, #6B6B6B, #373737); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(right, #6B6B6B, #373737); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(to right, #6B6B6B, #373737); /* Standard syntax */
+	color: white;
+	display: inline-block;
+	height: 265px;
+	margin-left: 10px;
+	vertical-align: top;
+	width: 540px;
+}
+
+#about_info h5:first-of-type {
+	background-color: #FEC72F;
+	color: black;
+	font-weight: bold;
+	height: 20px;
+	margin: 0px;
+	padding: 5px 10px;
+}
+
+#about_info h5:last-of-type {
+	font-weight: bold;
+	height: 20px;
+	margin: 0px;
+	padding: 10px 10px;
+}
+
+#about_info p {
+	font-size: 12px;
+	margin: 0px;
+	padding: 5px 10px;
+}
+
+#about_info p span {
+	font-weight: bold;
+}
+
+#content img:nth-of-type(2) {
+	display: inline-block;
+	height: 15px;
+	margin: 10px 15px;
+	width: 40px;
+}
+
+#content_mid {
+	color: #919966;
+	font-size: 10px;
+	display: inline-block;
+	height: 15px;
+	margin: 15px 5px 0px 0px;
+	vertical-align: top;
+	width: 850px;
+}
+
+.articles {
+	background-color: white;
+	background-position: center 20px;
+	background-repeat: no-repeat;
+	border: 2px ridge #222222;
+	display: inline-block;
+	font-size: 12px;
+	height: 300px;
+	margin-left: 8px;
+	width: 222px;
+}
+
+.articles h5 {
+	background-color: #FEC72F;
+	font-weight: bold;
+	height: 20px;
+	margin: 0px;
+	padding: 5px 10px;
+}
+
+.articles p {
+	margin-left: 10px;
+	margin-top: 100px;
+	margin-right: 10px;
+}
+
+#automotive {
+	background-image: url('automotive.png');
 }
